# nte-auto-fishing-script

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build.ps1  nte_auto_fishing.py  plot_bboxes.py  pyproject.toml  requirements.txt  run.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/: make_icon.py
